--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "quarkbox",
   "main": "./lib/quarkbox",
-  "version": "0.0.0",
-  "description": "A short description of your package",
+  "version": "0.0.1",
+  "description": "Build and run TurboPascal applications within Atom",
   "activationEvents": ["quarkbox:buildandrun", "quarkbox:build"],
-  "repository": "https://github.com/atom/quarkbox",
+  "repository": "https://github.com/notrodash/quarkbox/",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
