--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-    "name": "quarkbox",
-    "main": "./lib/quarkbox",
-    "version": "0.0.2",
-    "description": "Build and run TurboPascal applications within Atom",
-    "activationEvents": ["quarkbox:buildandrun", "quarkbox:build"],
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/notrodash/quarkbox.git"
-    },
-    "license": "MIT",
-    "engines": {
-        "atom": ">0.50.0"
-    },
-    "dependencies": {
-    }
+  "name": "quarkbox",
+  "main": "./lib/quarkbox",
+  "version": "0.0.3",
+  "description": "Build and run TurboPascal applications within Atom",
+  "activationEvents": [
+    "quarkbox:buildandrun",
+    "quarkbox:build"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/notrodash/quarkbox.git"
+  },
+  "license": "MIT",
+  "engines": {
+    "atom": ">0.50.0"
+  },
+  "dependencies": {}
 }
