- Fixed bug that prevented the running of .PAS files with spaces in the filepath. - Updated for the latest Atom v0.174.0 APIs. - Added a run option so that programs can be run without rebuilding - Refined some of the output text. - Configuration settings should now appear as soon as Quarkbox is installed. - Configuration settings now have helpful descriptions.
Signed-off-by: notrodash <n@notr.co>

--- a/package.json
+++ b/package.json
@@ -2,18 +2,14 @@
   "name": "quarkbox",
   "main": "./lib/quarkbox",
   "version": "0.0.9",
-  "description": "Build and run TurboPascal applications within Atom",
-  "activationEvents": [
-    "quarkbox:buildandrun",
-    "quarkbox:build"
-  ],
+  "description": "Build and run TurboPascal applications from Atom",
   "repository": {
     "type": "git",
     "url": "git://github.com/notrodash/quarkbox.git"
   },
   "license": "MIT",
   "engines": {
-    "atom": ">0.50.0"
+    "atom": ">=0.174.0"
   },
   "dependencies": {}
 }
